force-app/main/default/objects/Target_Criteria__c/fields/Denominator_Field__c.field-meta.xml
<CustomField>
    <fullName>Denominator_Field__c</fullName>
    <label>Denominator Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>