force-app/main/default/objects/Target_Criteria__c/fields/Distinct_Field__c.field-meta.xml
<CustomField>
    <fullName>Distinct_Field__c</fullName>
    <label>Distinct Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>