force-app/main/default/objects/Target_Criteria__c/fields/Numerator_Field__c.field-meta.xml
<CustomField>
    <fullName>Numerator_Field__c</fullName>
    <label>Numerator Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>