force-app/main/default/objects/Target_Criteria__c/fields/Prerequisite_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Prerequisite_Criteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Eligibility rule: prerequisite criteria that must be met before this criteria&apos;s incentive is calculated.</description>
    <inlineHelpText>If set, the salesperson must achieve the minimum % on this prerequisite criteria before qualifying for incentive on the current criteria. Example: S&amp;D incentive requires achieving at least 90% of Revenue target. Leave blank if no prerequisite is needed.</inlineHelpText>
    <label>Prerequisite Criteria</label>
    <referenceTo>Target_Criteria__c</referenceTo>
    <relationshipLabel>Dependent Criteria</relationshipLabel>
    <relationshipName>Dependent_Criteria</relationshipName>
    <type>Lookup</type>
</CustomField>