force-app/main/default/objects/Target_Criteria__c/fields/Secondary_Source_Objects__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Source_Objects__c</fullName>
    <label>Secondary Source Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>