force-app/main/default/objects/Target_Criteria__c/fields/Use_Attendance_Divisor__c.field-meta.xml
<CustomField>
    <fullName>Use_Attendance_Divisor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Attendance Divisor</label>
    <type>Checkbox</type>
</CustomField>